fix: hide credit clipped issue

--- a/client/packages/widget-iframe/css/_widgetBubble.scss
+++ b/client/packages/widget-iframe/css/_widgetBubble.scss
@@ -122,6 +122,7 @@
 
 		& ~ #credit {
 			display: inline-block;
+			margin-top: -0.1rem !important;
 
 			a {
 				text-decoration: none;
